# DiscordRs

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE
.github/workflows/: shuttle-deploy.yml
src/: bitrate.rs  main.rs  sql.rs  voice.rs
src/commands/: autoroom.rs  checks.rs  mod.rs
src/commands/autoroom/: autoroom.rs  mod.rs  savedroom.rs
src/services/: autoroom.rs  mod.rs  savedroom.rs  utils.rs
src/sql/: autoroom.rs  mod.rs  savedroom.rs
