[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-runtime = "0.57.0"
shuttle-serenity = "0.57.0"
shuttle-shared-db = { version = "0.57.0", features = ["sqlx", "sqlx-native-tls", "postgres"] }
tokio = "1.48.0"
tracing = "0.1.43"
bytes = { version = "1.11.0" }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
poise = { version = "0.6.1" }
futures = "0.3.31"
parking_lot = "0.12.5"
