[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
base64ct = "1.8.1"
anyhow = "1.0.100"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.48.0", features = ["default", "rt-multi-thread"] }
tracing = "0.1.44"
bytes = { version = "1.11.0" }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros"] }
poise = { version = "0.6.1" }
futures = "0.3.31"
parking_lot = "0.12.5"
once_cell = "1.21.3"
async-trait = "0.1.89"
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3.22", features = ["default", "env-filter"] }
tracing-better-stack = "0.1.0"
