[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
base64ct = "1.8.3"
anyhow = "1.0.102"
serenity = { version = "0.12.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.50.0", features = ["default", "rt-multi-thread"] }
tracing = "0.1.44"
bytes = { version = "1.11.1" }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros"] }
poise = { version = "0.6.1" }
futures = "0.3.32"
parking_lot = "0.12.5"
once_cell = "1.21.4"
async-trait = "0.1.89"
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3.23", features = ["default", "env-filter"] }
tracing-better-stack = "0.1.0"
thiserror = "2.0.18"